Add --dry-run flag when in ansible check mode, run dir creation, script download, script execution and dir removal even in check mode

--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -10,6 +10,7 @@
     state: directory
     suffix: cloud_ops_shell_scripts
   register: tempfolder
+  check_mode: no
   changed_when: false
 
 - name: Download script
@@ -17,6 +18,7 @@
     url: https://dl.google.com/cloudagents/add-monitoring-agent-repo.sh
     dest: "{{ tempfolder.path }}/add-monitoring-agent-repo.sh"
     mode: 0755
+  check_mode: no
   changed_when: false
 
 - when: package_state == 'present'
@@ -24,10 +26,11 @@
   - name: Add repo and install agent
     command:
       chdir: "{{ tempfolder.path }}"
-      cmd: "bash add-monitoring-agent-repo.sh --also-install --version={{ version }}"
+      cmd: "bash add-monitoring-agent-repo.sh --also-install --version={{ version }} { '--dry-run' if ansible_check_mode else '' }"
     environment:
       REPO_CODENAME: "{{ ansible_distribution_release }}"
     register: result
+    check_mode: no
     changed_when: "'No changes made.' not in result.stdout_lines"
     notify: restart monitoring agent
 
@@ -58,12 +61,14 @@
   - name: Uninstall agent and remove repo
     command:
       chdir: "{{ tempfolder.path }}"
-      cmd: bash add-monitoring-agent-repo.sh --uninstall --remove_repo
+      cmd: "bash add-monitoring-agent-repo.sh --uninstall --remove_repo { '--dry-run' if ansible_check_mode else '' }"
     register: result
+    check_mode: no
     changed_when: "'No changes made.' not in result.stdout_lines"
 
 - name: Remove temp directory
   file:
     path: "{{ tempfolder.path }}"
     state: absent
+  check_mode: no
   changed_when: false
