--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,3 +3,9 @@
   service:
     name: "{{ monitoring_service_name }}"
     state: restarted
+
+- name: restart google-cloud-ops agent
+  service:
+    name: google-cloud-ops-agent
+    state: restarted
+  when: not ansible_check_mode
