--- a/molecule/resources/playbooks/verify.yml
+++ b/molecule/resources/playbooks/verify.yml
@@ -1,7 +1,8 @@
 ---
-# Verify the state of the container after the role has finished executing.
+# Verify the state of the VM after the role has finished executing.
 - name: Verify
   hosts: all
+  become: true
 
   vars:
     agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
@@ -12,7 +13,7 @@
   tasks:
     - name: Include vars
       include_vars:
-        file: ../../vars/main.yml
+        file: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') }}/vars/main.yml"
 
     - name: Ensure the agent is present
       package:
@@ -24,7 +25,17 @@
       assert:
         that: result.changed == false
 
-    - when: main_config_file
+    - name: Ensure the agent is running
+      service:
+        name: "{{ vars[agent_type + '_service_name'] }}"
+        state: started
+      register: result
+
+    - name: Assert the agent was already running
+      assert:
+        that: result.changed == false
+
+    - when: main_config_file | length > 0
       block:
         - name: Read config file
           command:
@@ -33,9 +44,9 @@
 
         - name: Assert the custom config was copied properly
           assert:
-            that: "'# Sample custom config' in result.stdout"
+            that: "'# Sample custom config.' in result.stdout"
 
-    - when: additional_config_dir and agent_type != 'ops-agent'
+    - when: additional_config_dir | length > 0 and agent_type != 'ops-agent'
       block:
         - name: List contents of the plugin directory
           command:
@@ -45,3 +56,19 @@
         - name: Assert the plugin config was copied properly
           assert:
             that: "'custom_config.conf' in result.stdout"
+
+    - name: Uninstall agent
+      include_role:
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+      vars:
+        package_state: absent
+
+    - name: Ensure the agent is absent
+      package:
+        name: "{{ package_name }}"
+        state: absent
+      register: result
+
+    - name: Assert the agent was already absent
+      assert:
+        that: result.changed == false
